--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobrush - Find Your Dream Job</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../HOME/home.css">
+<link rel="stylesheet" href="../HOME/index.css">
 </head>
 <body>
     <!-- Navbar Section -->
@@ -13,11 +13,11 @@
         <div class="container">
             <div class="logo">Jobrush</div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./employers/embloyers.html">jobs</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#" class="btn">Sign Up</a></li>
+                <li><a href="./login/login.html" class="btn">Sign Up</a></li>
             </ul>
         </div>
     </header>
